@@ -1,3 +1,9 @@
+1999-08-09  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* parseutil/dcfd.c (main): Replace SA_ONSTACK and SV_ONSTACK with
+	HAVE_SIGACTION and HAVE_SIGVEC, respectively.  HP-UX provides both 
+	of the former but only one of the latter...
+
 1999-08-08  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* configure.in: Better tests for -lnsl and -lsocket
